--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 </head>
 
 <body>
+    <h1>Student Registration</h1>
     <form action="">
-        <h1>HTTP Lesson</h1>
+        <h1 class="form-header">HTTP Lesson</h1>
         <div>First Name: <input type="text" name="" id=""></div>
         <div>Last Name: <input type="text"></div>
         <div>Email: <input type="email"></div>
