--- a/index.html
+++ b/index.html
@@ -11,29 +11,36 @@
 
 <body>
     <h1>Student Registration</h1>
-    <form action="">
-        <h1 class="form-header">HTTP Lesson</h1>
-        <div>First Name: <input type="text" name="" id=""></div>
-        <div>Last Name: <input type="text"></div>
-        <div>Email: <input type="email"></div>
-        <div>Birthday: <input type="date"></div>
-        <div>Gender:</div>
-        <div><input type="radio" name="gender" id="">Male</div>
-        <div><input type="radio" name="gender" id="">Female</div>
-        <div><input type="radio" name="gender" id="">Other</div>
-        <div>Pets:</div>
-        <div><input type="checkbox">Cat</div>
-        <div><input type="checkbox">Dog</div>
-        <div>Cars:</div>
-        <div>
-            <select name="" id="">
-                <option value="volvo">Volvo</option>
-                <option value="audi">Audi</option>
-            </select>
+    <div class="main">
+        <div class="image">
+            <img src="images/registration.png" alt="">
         </div>
-        <input class="in" type="search" value="Register">
-        <input class="reset" type="reset">
-    </form>
+        <div class="form">
+            <form action="">
+                <h1 class="form-header">HTTP Lesson</h1>
+                <div>First Name: <input type="text" name="" id=""></div>
+                <div>Last Name: <input type="text"></div>
+                <div>Email: <input type="email"></div>
+                <div>Birthday: <input type="date"></div>
+                <div>Gender:</div>
+                <div><input type="radio" name="gender" id="">Male</div>
+                <div><input type="radio" name="gender" id="">Female</div>
+                <div><input type="radio" name="gender" id="">Other</div>
+                <div>Pets:</div>
+                <div><input type="checkbox">Cat</div>
+                <div><input type="checkbox">Dog</div>
+                <div>Cars:</div>
+                <div>
+                    <select name="" id="">
+                        <option value="volvo">Volvo</option>
+                        <option value="audi">Audi</option>
+                    </select>
+                </div>
+                <input class="in" type="search" value="Register">
+                <input class="reset" type="reset">
+            </form>
+        </div>
+    </div>
 </body>
 
 </html>
